webapp/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-apps03
  labels:
    istio-injection: enabled
