webapp/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        tier: backend
    spec:
      containers:
        - image: postgres:latest
          name: postgress
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
