webapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    matchLabels:
      app: db
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: db
        tier: backend
    spec:
      containers:
        - image: postgres:10.1
          name: postgress
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
    version: v1
  name: app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      tier: frontend
  template:
    metadata:
      labels:
        app: app
        tier: frontend
    spec:
      containers:
      - image: ghcr.io/devopsapp84/sample-apps/webapp:v1_1_0
        imagePullPolicy: Always
        name: webapp
        command: ["sh", "-c", "/webapp $DB_HOST $DB_PORT $POSTGRES_USER $POSTGRES_PASSWORD $POSTGRES_DB"]
        ports:
        - containerPort: 8080
          name: tcp-webapp
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /store
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: app
    version: v2
  name: app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      tier: frontend
  template:
    metadata:
      labels:
        app: app
        tier: frontend
    spec:
      containers:
      - image: ghcr.io/devopsapp84/sample-apps/webapp:v2_1_0
        imagePullPolicy: Always
        name: webapp
        command: ["sh", "-c", "/webapp $DB_HOST $DB_PORT $POSTGRES_USER $POSTGRES_PASSWORD $POSTGRES_DB"]
        ports:
        - containerPort: 8080
          name: tcp-webapp
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /store
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 3
