webapp/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-postgres
  labels:
    app: sample-postgres
spec:
  selector:
    matchLabels:
      app: sample-postgres
      tier: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-postgres
        tier: postgres
    spec:
      containers:
        - image: postgres:latest
          name: postgres
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistent-storage
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim
