webapp/app-svc.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: app-svc
  labels:
    app: app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: tcp-app
  selector:
    app: app
    tier: frontend
