webapp/db-svc.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: db-svc
  labels:
    app: db
spec:
  type: NodePort
  ports:
    - port: 5432
      name: tcp-postgres
  selector:
    app: db
    tier: backend
