webapp/postgres-svc.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: sample-postgres
  labels:
    app: sample-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
      name: tcp-postgres
  selector:
    app: sample-postgres
    tier: postgres
