webapp/services.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: app-svc
  labels:
    app: app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: tcp-app
  selector:
    app: app
    tier: frontend
---
apiVersion: v1 
kind: Service 
metadata:
  name: db-svc
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: tcp-postgres
  selector:
    app: db
    tier: backend
