webapp/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.external.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webapp
spec:
  host: app-svc.sample-apps03.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
  - "app.external.com"
  gateways:
  - webapp-gateway
  http:
  - match:
    - uri:
        prefix: /store
    route:
      - destination:
          host: app-svc.sample-apps03.svc.cluster.local
          port:
            number: 8080
          subset: v1
        weight: 90
      - destination:
          host: app-svc.sample-apps03.svc.cluster.local
          port:
            number: 8080
          subset: v2
        weight: 10
