webapp/webapp-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "webapp.k8s.test.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "webapp.k8s.test.com"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /store
    route:
    - destination:
        host: app-svc
        port:
          number: 8080
